dynamodel_tests/tests/fails/not_a_struct.stderr
error: Unsupported shape `enum`. Expected struct with named fields.
 --> tests/fails/not_a_struct.rs:3:10
  |
3 | #[derive(Dynamodel)]
  |          ^^^^^^^^^
  |
  = note: this error originates in the derive macro `Dynamodel` (in Nightly builds, run with -Z macro-backtrace for more info)
